# repkgs

./: .gitattributes  .gitignore  README.md  bsconfig.json  bundle.js  dune-project  esy.json  package.json  rollup.config.js  tsconfig.json
__tests__/: Package_test.re  Path_test.ree  Repkgs_Compat_test.re  Repkgs_Compat_test.ree  Repkgs_Utils_test.re  Repkgs_test.re
esy.lock/: index.json
test/: TestFile.re  TestGlob.re  TestOcamlRe.re  TestSmokeTest.re  dune
test/_snapshots/: Integration_Test_list.1e10a6c9.0.snapshot  Integration_Test_list.21c4fbb3.0.snapshot  Integration_Test_list.26f4de80.0.snapshot  Integration_Test_list.28c3a443.0.snapshot  Integration_Test_list.52d835a3.0.snapshot  Integration_Test_list.5691b084.0.snapshot  Integration_Test_list.5bd07013.0.snapshot  Integration_Test_list.6cdaded3.0.snapshot  Integration_Test_list.810b8f19.0.snapshot  Integration_Test_list.83616a42.0.snapshot  Integration_Test_list.89ab0b87.0.snapshot  Integration_Test_list.9158d460.0.snapshot  Integration_Test_list.9d8f4639.0.snapshot  Integration_Test_list.a7bf9af0.0.snapshot  Integration_Test_list.a927916c.0.snapshot  Integration_Test_list.b09ae7d9.0.snapshot  Integration_Test_list.b88b84eb.0.snapshot  Integration_Test_list.e8460922.0.snapshot  Integration_Test_list.fe4b94be.0.snapshot  Nested_folder.030a5eab.0.snapshot  Nested_folder.0aedf6c8.0.snapshot  Nested_folder.4755d15c.0.snapshot  Nested_folder.d28752fd.0.snapshot  discover_root_from_nested_folder.3f877e93.0.snapshot  discover_root_from_nested_folder.5d512d9e.0.snapshot  discover_root_from_nested_folder.b9c04060.0.snapshot  discover_root_from_nested_folder.e08a8404.0.snapshot  discover_workspace_manager.16afedaa.0.snapshot  discover_workspace_manager.5188d953.0.snapshot  discover_workspace_manager.aaccc8eb.0.snapshot  discover_workspace_manager.e2799c04.0.snapshot  include_worktree.15d22a2d.0.snapshot  include_worktree.356ff094.0.snapshot  include_worktree.3a34d02d.0.snapshot  include_worktree.f4ba8261.0.snapshot
test/support/: TestUtils.re
testExe/: dune
(+81 files in other folders)
