(executable (name RunRePkgsTests)
    (modules (:standard \ RepkgsCliTestExePesyModules))
    (public_name RunRePkgsTests.exe)
    (libraries repkgs--cli.testExe.pesy-modules)
    (flags -open RepkgsCliTestExePesyModules))
(library (public_name repkgs--cli.testExe.pesy-modules)
    (name RepkgsCliTestExePesyModules) (modules RepkgsCliTestExePesyModules)
    (libraries repkgs--cli.test))
(rule
    (with-stdout-to RepkgsCliTestExePesyModules.re
        (run echo "module Test = RepkgsCliTest;")))
